--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -74,3 +74,18 @@
     <button class="contact-button">დაგვიკავშირდით</button>
   </div>
 </div>
+
+
+
+<div #animatedDiv class="scroll-animation">
+  <p>sabaaaaaaa</p>
+  <p>sabaaaaaaa</p>
+  <p>sabaaaaaaa</p>
+  <p>sabaaaaaaa</p>
+  <p>sabaaaaaaa</p>
+  <p>sabaaaaaaa</p>
+  <p>sabaaaaaaa</p>
+  <p>sabaaaaaaa</p>
+  <p>sabaaaaaaa</p>
+  <p>sabaaaaaaa</p>
+</div>
