--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <img src="logo.png" href="#main" alt="" >
+                   <a href="#main"><img src="logo.png" alt="" ></a> 
                 </div>
                 <ul class="nav-links">
                     <li><a href="#about">About </a></li>
