--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,8 @@
   </div> 
 
 
-<div class="container" id="about">
+<section class="about" id="about">
+<div class="container" >
   <section class="about-section">
     <div class="content-wrapper">
       <!-- ხელმძღვანელის ფოტო -->
@@ -43,10 +44,11 @@
 </div>
 </div>
   </section>
+</div>
+</section>
 
 
-
-
+<section class="services" id="services">
 <div #scrollAnimate class="scroll-animate" id="skills"> 
 <section class="skill-cap"> 
   <p class="sk">--Skills--</p>
@@ -72,6 +74,6 @@
   </div>
 </section>
 </div>
-
+</section>
 
 <br><br><br><br><br><br><br>
