--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -156,11 +156,19 @@ $dark-bg-end: #0c1824;
 $text-color: #ffffff;
 $border-color: rgba(255, 255, 255, 0.1);
 
-
-.container {
+.about {
+  background: radial-gradient(
+    circle at center, 
+    #2c3e50 0%, 
+    #0a0e17 100%
+  );
+  height: 100vh;
+  
+  .container {
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
+
   .about-section {
     display: flex;
     flex-direction: column;
@@ -248,6 +256,8 @@ $border-color: rgba(255, 255, 255, 0.1);
     }
   }
 }
+}
+
 
 
 
@@ -319,12 +329,20 @@ box-shadow:  -20px -20px 60px #0d1319,
   transform: translateY(0);
 }
 
-
-.skill-cap {
+.services {
+  height: 100vh;
+  background: radial-gradient(
+    circle at center, 
+    #2c3e50 0%, 
+    #0a0e17 100%
+  );
+  .skill-cap {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  max-width: 1200px;
   gap: 20px;
-  margin-top: 200px;
+  padding-top: 350px;
+  margin: 0 auto;
   .card {
 box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
 backdrop-filter: blur( 5.5px );
@@ -358,4 +376,5 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
     justify-content: center;
     color: $gold-darkened;
     font-size: 2.5rem;
+}
 }
