--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                   <a href="#main"><img src="logo.png" alt="" ></a> 
+                   <a href="#main" ><img src="logo.png" alt="" ></a> 
                 </div>
                 <ul class="nav-links">
                     <li><a href="#about">About </a></li>
@@ -11,7 +11,7 @@
                     <li><a href="#">##</a></li>
                     <li><a href="#">##</a></li>
                 </ul>
-                <a href="#contact" class="contact-button">Contact Us</a>
+                <a href="contact" class="contact-button">Contact Us</a>
             </nav>
         </div>
-    </header>
+    </header> 
