--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,11 +7,10 @@
                 <ul class="nav-links">
                     <li><a href="#about">About </a></li>
                     <li><a href="#skills">Skills</a></li>
-                    <li><a href="#capabilities">Capabilities</a></li>
                     <li><a href="#">##</a></li>
                     <li><a href="#">##</a></li>
                 </ul>
-                <a href="contact" class="contact-button">Contact Us</a>
+                <a href="#contact" class="contact-button">Contact Us</a>
             </nav>
         </div>
     </header> 
