--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,6 @@
 
 
     <p>"ჩვენ ვართ კონცენტრირებული მხოლოდ მომხმარებლის კეთილგანწყობაზე, ამიტომაც ჩვენ გთავაზობთ უმაღლესი ხარისხის მომსახურეობას."</p>
-
   </div> 
 
 
@@ -107,3 +106,7 @@
 </section>
 </div>
 </section>
+
+
+
+<!-- unda davamato boostrap da gamoviyeno image sliderze da aseve contact ze rom uketesad gamovides aseve dges rac axsna isac shegvidzlia gamoviyenot (ang11) -->
