--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,9 @@
 </header>
 
 <main>
-<app-home></app-home>
+  <router-outlet></router-outlet>
 </main>
 
 <footer>
-  <app-contact></app-contact>
     <app-footer></app-footer>
 </footer>
